--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,51 @@ code {
     monospace;
 }
 
+.homePageDiv {
+  font-family: "Gill Sans", sans-serif;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  font-size: larger;
+}
+
+.button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  display: inline-block;
+  margin-left: 10%;
+  margin-right: auto;
+  width: 25%;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+  
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+#NavLogoType {
+  font-family: "Gill Sans", sans-serif;
+  color: rgb(255, 255, 255);
+  display: inline;
+  padding: 10%;
+  font-size: 42px;
+}
 .NavBar {
   /* position: fixed; */
    top: 0;
@@ -19,7 +64,7 @@ code {
   padding-top: 10px;
   padding-bottom: 60px;
   width: 100%;
-  background-color: rgb(206, 206, 206);
+  background-color: rgb(30, 124, 54);
   box-shadow: 0 2px 4px 0 #888888;
 } 
 
@@ -33,11 +78,11 @@ code {
 
 .navBarLink {
   display: inline;
-  padding: 10px;
+  padding: 20px;
   font-size: 24px;
   font-weight: 700;
   text-decoration: none;
-  color: rgb(31, 31, 31);
+  color: rgb(248, 248, 248);
 }
 
 .NavBarULRight {
@@ -126,4 +171,21 @@ code {
   border: none;
   background:red;
   box-shadow: 0px 0px 1px #777;
+}
+
+.lessonCard {
+  display: block;
+  margin-left: 10%;
+  margin-right: auto;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 2px 16px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.lessonCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
