--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,13 +50,11 @@ code {
   color: white;
 }
 
-#NavLogoType {
-  font-family: "Gill Sans", sans-serif;
-  color: rgb(255, 255, 255);
-  display: inline;
-  padding: 10%;
-  font-size: 42px;
-}
+/* #NavLogoType {
+    display:block;
+    width: 50px;
+    height: 50px;
+} */
 .NavBar {
   /* position: fixed; */
    top: 0;
